dev/manifests/app_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app-kub-namespace
  labels: 
    kubequest: issuer
